# LXCodexMeter

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  RELEASE.md  RELEASE_BODY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: reconstruct-demo-video.yml  release.yml
docs/media/: README.md  video-link-note.md
scripts/: security-audit.ps1
src/: App.tsx  ConfirmDialog.tsx  ThemedSelect.tsx  UsageLogPage.tsx  i18n.ts  styles.css  themedSelectUtils.d.ts  themedSelectUtils.js  types.ts  usageLogUtils.d.ts  usageLogUtils.js  windowGeometry.d.ts  windowGeometry.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs  meter.rs  quota.rs  usage_csv.rs  usage_runtime.rs  usage_task_log.rs  usage_task_log_tests.rs
tests/: usageLogUtils.test.mjs  windowGeometry.test.mjs
update/: latest.json
