[package]
name = "lx-codex-meter"
version = "0.6.14"
description = "Local-only Codex quota meter with tray and floating window"
authors = ["lttlz"]
edition = "2021"

[lib]
name = "lx_codex_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
